# scraper

./: LICENSE  project_schema.json  pyproject.toml
scraper/: app.py  config.py
scraper/controllers/: __init__.py  project.py
scraper/database/: __init__.py  chapters.py  projects.py
scraper/models/: __init__.py  chapter.py  project.py
scraper/schemas/: chapters.py  project.py
