[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Romulo Sousa <carmosousa20@outlook.com>"]
license = ["MIT"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pydantic = "^1.9.2"
python-dateutil = "^2.8.2"
isort = "^5.10.1"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
